--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>codingChallenge-Survey</title>
-	<link rel="shortcut icon" type="img/png" href="/favicon.ico"/>
+	<link rel="shortcut icon" type="img/png" href="/img/favicon.png"/>
 
 	<!-- Here we include bootstrap. This will be made available to all of the generated HTML/JS that React generates-->
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
